[metadata]
name = pce
version = 0.1.2
author = Luca Giaccone
author_email = luca.giaccone@polito.it
description = Polynomial Chaos Expansion method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giaccone/pce
project_urls =
    example of use = https://github.com/giaccone/cogen_eval
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    joblib
